; ModuleID = '/home/carl/AnghaBench/sway/sway/commands/extr_bind.c_free_sway_binding.c'
source_filename = "/home/carl/AnghaBench/sway/sway/commands/extr_bind.c_free_sway_binding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_binding = type { %struct.sway_binding*, %struct.sway_binding*, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @free_sway_binding(%struct.sway_binding* %0) #0 {
  %2 = alloca %struct.sway_binding*, align 8
  store %struct.sway_binding* %0, %struct.sway_binding** %2, align 8
  %3 = load %struct.sway_binding*, %struct.sway_binding** %2, align 8
  %4 = icmp ne %struct.sway_binding* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %25

6:                                                ; preds = %1
  %7 = load %struct.sway_binding*, %struct.sway_binding** %2, align 8
  %8 = getelementptr inbounds %struct.sway_binding, %struct.sway_binding* %7, i32 0, i32 3
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @list_free_items_and_destroy(i32 %9)
  %11 = load %struct.sway_binding*, %struct.sway_binding** %2, align 8
  %12 = getelementptr inbounds %struct.sway_binding, %struct.sway_binding* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @list_free_items_and_destroy(i32 %13)
  %15 = load %struct.sway_binding*, %struct.sway_binding** %2, align 8
  %16 = getelementptr inbounds %struct.sway_binding, %struct.sway_binding* %15, i32 0, i32 1
  %17 = load %struct.sway_binding*, %struct.sway_binding** %16, align 8
  %18 = call i32 @free(%struct.sway_binding* %17)
  %19 = load %struct.sway_binding*, %struct.sway_binding** %2, align 8
  %20 = getelementptr inbounds %struct.sway_binding, %struct.sway_binding* %19, i32 0, i32 0
  %21 = load %struct.sway_binding*, %struct.sway_binding** %20, align 8
  %22 = call i32 @free(%struct.sway_binding* %21)
  %23 = load %struct.sway_binding*, %struct.sway_binding** %2, align 8
  %24 = call i32 @free(%struct.sway_binding* %23)
  br label %25

25:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @list_free_items_and_destroy(i32) #1

declare dso_local i32 @free(%struct.sway_binding*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
